--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -45,8 +45,8 @@
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Отключает триггеры увеличения камеры",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "Без эффекта смерти",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Отключает визуальные эффекты смерти",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP": "Без Do Not Переворота",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Не даёт перевернуть текст attempt и level complete",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP": "Без \"Do Not\" Переворота",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Не даёт перевернуть текст \"attempt\" и \"level complete\"",
   "COSMETIC/HACK_NO_PARTICLES": "Без частиц",
   "COSMETIC/HACK_NO_PARTICLES/TIP": "Отключает систему частиц (большую часть)",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Без молнии порталов",
@@ -142,7 +142,7 @@
   "LEVEL/FRAME_STEPPER/DROPDOWN/STEP": "Бинд шага:",
   "LEVEL/FRAME_STEPPER/DROPDOWN/STEP/PRE": "Шаг: ",
   "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER": "Пошаговые кадры",
-  "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Позволяет делать покадровые шаги вперёд и назад",
+  "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Позволяет делать покадровые \"шаги\" вперёд и назад",
   "LEVEL/HACK_0_PRACTICE_COMPLETE": "Прохождение уровня с 0% в практике",
   "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Позволяет пройти уровень в обычном режиме если уровень был пройден с 0% в режиме практики",
   "LEVEL/HACK_ALL_MODES_PLATFORMER": "Все виды игры в платформер",
@@ -204,7 +204,7 @@
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATHS_LIMIT/SUF": " смертей",
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATH_LIMIT_ON": "Лимит смертей",
   "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS": "Лимиты ноуклипа",
-  "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS/TIP": "Убивает игрока при достижении определённого порога аккуратности, требуется Ноуклип",
+  "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS/TIP": "Убивает игрока при достижении определённого порога аккуратности, требуется \"Ноуклип\"",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Сид:",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Сид: ",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Сид рандома",
@@ -231,7 +231,7 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " кадров",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Неограниченная длина редактора",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Показывать трейл хитбоксов",
-  "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показывает трейл где был хитбокс игрока во время попытки. Требуется функция Показать хитбоксы",
+  "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показывает трейл где был хитбокс игрока во время попытки. Требуется функция \"Показать хитбоксы\"",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Устаревшее просчитываение",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Умный StartPos",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Автоматически устанавливает режим, скорость, размер и границы для StartPos",
