--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -269,7 +269,7 @@
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/1": "Низкий",
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/2": "Нормальный",
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/3": "Высокий",
-  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Высочайший",
+  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Наивысший",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Приоритет потоков",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Влияет на то, сколько времени CPU может получить Geometry Dash, может улучшить производительность"
 }
