im bored. translated for 113/274

--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -1,116 +1,116 @@
 {
-  "NX/COLOUR/B": "",
-  "NX/COLOUR/B/PRE": "",
-  "NX/COLOUR/DROPDOWN/INPUT": "",
-  "NX/COLOUR/DROPDOWN/INPUT/PRE": "",
-  "NX/COLOUR/G": "",
-  "NX/COLOUR/G/PRE": "",
-  "NX/COLOUR/INPUT": "",
-  "NX/COLOUR/INPUT/PRE": "",
-  "NX/COLOUR/R": "",
-  "NX/COLOUR/R/PRE": "",
-  "NX/COLOUR/RESET": "",
+  "NX/COLOUR/B": "Синий: ",
+  "NX/COLOUR/B/PRE": "B: ",
+  "NX/COLOUR/DROPDOWN/INPUT": "Hex цвет: ",
+  "NX/COLOUR/DROPDOWN/INPUT/PRE": "Hex: ",
+  "NX/COLOUR/G": "Зелёный: ",
+  "NX/COLOUR/G/PRE": "G",
+  "NX/COLOUR/INPUT": "Hex цвет: ",
+  "NX/COLOUR/INPUT/PRE": "Hex: ",
+  "NX/COLOUR/R": "Красный: ",
+  "NX/COLOUR/R/PRE": "R: ",
+  "NX/COLOUR/RESET": "Сбросить цвет",
   "HOME": "Mega Hack",
-  "HOME/LANGUAGE": "",
-  "HOME/SEARCH": "",
-  "BYPASS": "",
-  "BYPASS/HACK_MAIN_LEVELS": "",
-  "BYPASS/HACK_MAIN_LEVELS/TIP": "",
-  "BYPASS/HACK_MUSIC_UNLOCKER": "",
-  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "",
-  "BYPASS/HACK_SLIDER_LIMIT": "",
-  "BYPASS/HACK_SLIDER_LIMIT/TIP": "",
-  "BYPASS/HACK_TEXT_LENGTH": "",
-  "BYPASS/HACK_TEXT_LENGTH/TIP": "",
-  "BYPASS/HACK_TREASURE_ROOM": "",
-  "BYPASS/HACK_TREASURE_ROOM/TIP": "",
-  "BYPASS/HACK_UNLOCK_ICONS": "",
-  "BYPASS/HACK_UNLOCK_ICONS/TIP": "",
-  "BYPASS/HACK_UNLOCK_SHOPS": "",
-  "BYPASS/HACK_UNLOCK_SHOPS/TIP": "",
-  "BYPASS/HACK_UNLOCK_VAULTS": "",
-  "BYPASS/HACK_UNLOCK_VAULTS/TIP": "",
-  "COSMETIC": "",
-  "COSMETIC/HACK_CLASSIC_PARTICLES": "",
-  "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "",
-  "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "",
-  "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "",
-  "COSMETIC/HACK_HIDE_PAUSE_MENU": "",
-  "COSMETIC/HACK_HIDE_PAUSE_MENU/TIP": "",
-  "COSMETIC/HACK_HIDE_PLAYER": "",
-  "COSMETIC/HACK_HIDE_PLAYER/TIP": "",
-  "COSMETIC/HACK_NO_CAMERA": "",
-  "COSMETIC/HACK_NO_CAMERA/TIP": "",
-  "COSMETIC/HACK_NO_CAMERA_ZOOM": "",
-  "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "",
-  "COSMETIC/HACK_NO_DEATH_EFFECT": "",
-  "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP": "",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "",
-  "COSMETIC/HACK_NO_PARTICLES": "",
-  "COSMETIC/HACK_NO_PARTICLES/TIP": "",
-  "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "",
-  "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "",
-  "COSMETIC/HACK_NO_PULSE": "",
-  "COSMETIC/HACK_NO_PULSE/TIP": "",
-  "COSMETIC/HACK_NO_RESPAWN_FLASH": "",
-  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "",
-  "COSMETIC/HACK_NO_SHADERS": "",
-  "COSMETIC/HACK_NO_SHADERS/TIP": "",
-  "COSMETIC/HACK_NO_SHAKE": "",
-  "COSMETIC/HACK_NO_SHAKE/TIP": "",
-  "COSMETIC/HACK_NO_TRAIL": "",
-  "COSMETIC/HACK_NO_TRAIL/TIP": "",
-  "COSMETIC/HACK_NO_WAVE_PULSE": "",
-  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL": "",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "",
-  "COSMETIC/HACK_TRAIL_CUTTING": "",
-  "COSMETIC/HACK_TRAIL_CUTTING/TIP": "",
-  "COSMETIC/HACK_WAVE_TRAIL_FIX": "",
-  "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "",
-  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "",
-  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "",
-  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "",
-  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "",
-  "CREATOR": "",
-  "CREATOR/HACK_ACCURATE_SAVE": "",
-  "CREATOR/HACK_ACCURATE_SAVE/TIP": "",
-  "CREATOR/HACK_COPY_HACK": "",
-  "CREATOR/HACK_COPY_HACK/TIP": "",
-  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS": "",
-  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "",
-  "CREATOR/HACK_DEFAULT_SONG_BYPASS": "",
-  "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "",
-  "CREATOR/HACK_EDITOR_EXTENSION": "",
-  "CREATOR/HACK_EDITOR_EXTENSION/TIP": "",
-  "CREATOR/HACK_FREE_SCROLL": "",
-  "CREATOR/HACK_FREE_SCROLL/TIP": "",
-  "CREATOR/HACK_HIDE_UI": "",
-  "CREATOR/HACK_HIDE_UI/TIP": "",
-  "CREATOR/HACK_LEVEL_EDIT": "",
-  "CREATOR/HACK_LEVEL_EDIT/TIP": "",
-  "CREATOR/HACK_NO_C_MARK": "",
-  "CREATOR/HACK_NO_C_MARK/TIP": "",
-  "CREATOR/HACK_PLACE_OVER": "",
-  "CREATOR/HACK_PLACE_OVER/TIP": "",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "",
-  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "",
-  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "",
-  "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "",
-  "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "",
-  "CREATOR/HACK_VERIFY_HACK": "",
-  "CREATOR/HACK_VERIFY_HACK/TIP": "",
-  "LEVEL": "",
+  "HOME/LANGUAGE": "Language: ",
+  "HOME/SEARCH": "Искать: ",
+  "BYPASS": "Обход",
+  "BYPASS/HACK_MAIN_LEVELS": "Основные уровни",
+  "BYPASS/HACK_MAIN_LEVELS/TIP": "Разблокировает официальные демоны",
+  "BYPASS/HACK_MUSIC_UNLOCKER": "Разблокировщик музыки",
+  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Позволяет поменять музыку в меню и в практике",
+  "BYPASS/HACK_SLIDER_LIMIT": "Лимит слайдера",
+  "BYPASS/HACK_SLIDER_LIMIT/TIP": "Позволяет перемещать слайдеры за пределы видимого диапазона",
+  "BYPASS/HACK_TEXT_LENGTH": "Длина текста",
+  "BYPASS/HACK_TEXT_LENGTH/TIP": "Убирает лимиты текста при вводе",
+  "BYPASS/HACK_TREASURE_ROOM": "Treasure Room",
+  "BYPASS/HACK_TREASURE_ROOM/TIP": "Разблокирует treasure room",
+  "BYPASS/HACK_UNLOCK_ICONS": "Иконки",
+  "BYPASS/HACK_UNLOCK_ICONS/TIP": "Разблокирует все иконки",
+  "BYPASS/HACK_UNLOCK_SHOPS": "Магазины",
+  "BYPASS/HACK_UNLOCK_SHOPS/TIP": "Разблокирует все магазины",
+  "BYPASS/HACK_UNLOCK_VAULTS": "Хранилища",
+  "BYPASS/HACK_UNLOCK_VAULTS/TIP": "Разблокирует все хранилища",
+  "COSMETIC": "Косметика",
+  "COSMETIC/HACK_CLASSIC_PARTICLES": "Классические партиклы",
+  "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Восстанавливает классические мини-частицы, которые следуют за игроком",
+  "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Спрятать кнопку паузы",
+  "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Скрывает кнопку паузы, когда внутриигровой курсор включен",
+  "COSMETIC/HACK_HIDE_PAUSE_MENU": "Спрятать паузу",
+  "COSMETIC/HACK_HIDE_PAUSE_MENU/TIP": "Скрывает меню паузы. Помогает при создании скриншотов уровней",
+  "COSMETIC/HACK_HIDE_PLAYER": "Спрятать игрока",
+  "COSMETIC/HACK_HIDE_PLAYER/TIP": "Скрывает игрока",
+  "COSMETIC/HACK_NO_CAMERA": "Эффекты камеры",
+  "COSMETIC/HACK_NO_CAMERA/TIP": "Скрывает триггеры, изменяющие камеру",
+  "COSMETIC/HACK_NO_CAMERA_ZOOM": "Зум камеры",
+  "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Убирает зум-триггеры",
+  "COSMETIC/HACK_NO_DEATH_EFFECT": "Эффект смерти",
+  "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Убирает эффект смерти",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP": "Убрать Do Not Flip",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Выравнивает текст попыток",
+  "COSMETIC/HACK_NO_PARTICLES": "Убрать партиклы",
+  "COSMETIC/HACK_NO_PARTICLES/TIP": "Убирает партиклы",
+  "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Свет порталов",
+  "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Отключает свет порталов при изменении размеров",
+  "COSMETIC/HACK_NO_PULSE": "Убрать пульс",
+  "COSMETIC/HACK_NO_PULSE/TIP": "Отключает пульсацию на объектах",
+  "COSMETIC/HACK_NO_RESPAWN_FLASH": "Вспышка",
+  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Отключает эффект вспышки и круга при возрождении.",
+  "COSMETIC/HACK_NO_SHADERS": "Шейдеры",
+  "COSMETIC/HACK_NO_SHADERS/TIP": "Убирает шейдеры",
+  "COSMETIC/HACK_NO_SHAKE": "Тряска",
+  "COSMETIC/HACK_NO_SHAKE/TIP": "Убирает shake-триггер",
+  "COSMETIC/HACK_NO_TRAIL": "След",
+  "COSMETIC/HACK_NO_TRAIL/TIP": "Убирает след (трейл) игрока",
+  "COSMETIC/HACK_NO_WAVE_PULSE": "Пульсация волны",
+  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Убирает пульсацию волны",
+  "COSMETIC/HACK_NO_WAVE_TRAIL": "След волны",
+  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Отключает жесткий волновой след, стандартный след остается",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "След волны позади",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Отключает след игрока по умолчанию за следом (трейлом) волны",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Твердый след волны",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Убирает бленд на следе волны",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Триггеры при смерти",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Останавливает триггеры при смерти",
+  "COSMETIC/HACK_TRAIL_CUTTING": "Вырез следа",
+  "COSMETIC/HACK_TRAIL_CUTTING/TIP": "Возвращает баг, который обрезает след волны",
+  "COSMETIC/HACK_WAVE_TRAIL_FIX": "Фикс волны",
+  "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "Чинит баги, связанные с волной",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "След волны при смерти",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Исправляет замыкание следа (трейла) волны",
+  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Размер следа волны: ",
+  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "x",
+  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "Размер",
+  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "Изменяет размер следа (трейла) волны",
+  "CREATOR": "Креатор",
+  "CREATOR/HACK_ACCURATE_SAVE": "Улучшенное сохранение",
+  "CREATOR/HACK_ACCURATE_SAVE/TIP": "Позиции объектов будут сохранятся аккуратней",
+  "CREATOR/HACK_COPY_HACK": "Копия уровней",
+  "CREATOR/HACK_COPY_HACK/TIP": "Позволяет скопировать любой уровень",
+  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS": "Обход лимита объектов",
+  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "Позволяет обойти лимит максимального количества объектов",
+  "CREATOR/HACK_DEFAULT_SONG_BYPASS": "Обход музыки",
+  "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "Позволяет использовать скрытые песни по умолчанию в редакторе",
+  "CREATOR/HACK_EDITOR_EXTENSION": "Дополнение редактора",
+  "CREATOR/HACK_EDITOR_EXTENSION/TIP": "Увеличивает длину редактора в 128 раз",
+  "CREATOR/HACK_FREE_SCROLL": "Свободный скролл",
+  "CREATOR/HACK_FREE_SCROLL/TIP": "Позволяет вам прокручивать за пределы редактора",
+  "CREATOR/HACK_HIDE_UI": "Спрятать интерфейс",
+  "CREATOR/HACK_HIDE_UI/TIP": "Скрывает пользовательский интерфейс редактора при создании уровня",
+  "CREATOR/HACK_LEVEL_EDIT": "Редактор уровней",
+  "CREATOR/HACK_LEVEL_EDIT/TIP": "Позволяет редактировать любой уровень в меню паузы",
+  "CREATOR/HACK_NO_C_MARK": "Убрать C",
+  "CREATOR/HACK_NO_C_MARK/TIP": "Убирает (C) при копировании уровня",
+  "CREATOR/HACK_PLACE_OVER": "Ставить поверх",
+  "CREATOR/HACK_PLACE_OVER/TIP": "Позволяет поместить один и тот же объект поверх самого себя в редакторе (я сам не понял что это)",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Плавный след в редакторе",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Улучшает след игрока в тест-моде редактора",
+  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "Обход лимита тулбокса",
+  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Позволяет использовать больше объектов в панели инструментов редактора",
+  "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Обход триггеров",
+  "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Позволяет обойти лимит максимального числа в триггерах",
+  "CREATOR/HACK_VERIFY_HACK": "Хак проверки",
+  "CREATOR/HACK_VERIFY_HACK/TIP": "Система будет думать что вы прошли уровень и готовы к опубликованию",
+  "LEVEL": "Уровень",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "",
@@ -243,7 +243,7 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "",
-  "UNIVERSAL": "",
+  "UNIVERSAL": "Универсальное",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "",
   "UNIVERSAL/HACK_AUTO_SAFE_MODE": "",
