--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -1,5 +1,5 @@
 {
-  "NX/COLOUR/B": "Сіній: ",
+  "NX/COLOUR/B": "Синій: ",
   "NX/COLOUR/B/PRE":"С: ",
   "NX/COLOUR/DROPDOWN/INPUT": "HEX колір:",
   "NX/COLOUR/DROPDOWN/INPUT/PRE": "Hex: ",
