--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -1,105 +1,105 @@
 {
-  "NX/COLOUR/B": "",
-  "NX/COLOUR/B/PRE": "",
-  "NX/COLOUR/DROPDOWN/INPUT": "",
-  "NX/COLOUR/DROPDOWN/INPUT/PRE": "",
-  "NX/COLOUR/G": "",
-  "NX/COLOUR/G/PRE": "",
-  "NX/COLOUR/INPUT": "",
-  "NX/COLOUR/INPUT/PRE": "",
-  "NX/COLOUR/R": "",
-  "NX/COLOUR/R/PRE": "",
-  "NX/COLOUR/RESET": "",
+  "NX/COLOUR/B": "Синий",
+  "NX/COLOUR/B/PRE": "С",
+  "NX/COLOUR/DROPDOWN/INPUT": "Цвет 16-ричного кода",
+  "NX/COLOUR/DROPDOWN/INPUT/PRE": "16-ричный",
+  "NX/COLOUR/G": "Зелёный",
+  "NX/COLOUR/G/PRE": "З",
+  "NX/COLOUR/INPUT": "Цвет 16-ричного кода",
+  "NX/COLOUR/INPUT/PRE": "16-ричный",
+  "NX/COLOUR/R": "Красный",
+  "NX/COLOUR/R/PRE": "К",
+  "NX/COLOUR/RESET": "Сбросить Цвет",
   "HOME": "Mega Hack",
-  "HOME/LANGUAGE": "",
-  "HOME/SEARCH": "",
-  "BYPASS": "",
-  "BYPASS/HACK_MAIN_LEVELS": "",
-  "BYPASS/HACK_MAIN_LEVELS/TIP": "",
-  "BYPASS/HACK_MUSIC_UNLOCKER": "",
-  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "",
+  "HOME/LANGUAGE": "Язык:",
+  "HOME/SEARCH": "Поиск:",
+  "BYPASS": "Обход",
+  "BYPASS/HACK_MAIN_LEVELS": "Разблокировать Основные Уровни",
+  "BYPASS/HACK_MAIN_LEVELS/TIP": "Разблокирует основные уровни сложности Демон",
+  "BYPASS/HACK_MUSIC_UNLOCKER": "Разблокировка Музыки",
+  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Позволяет поставить свою музыку для практики и главного меню",
   "BYPASS/HACK_SLIDER_LIMIT": "",
   "BYPASS/HACK_SLIDER_LIMIT/TIP": "",
-  "BYPASS/HACK_TEXT_LENGTH": "",
-  "BYPASS/HACK_TEXT_LENGTH/TIP": "",
-  "BYPASS/HACK_TREASURE_ROOM": "",
-  "BYPASS/HACK_TREASURE_ROOM/TIP": "",
-  "BYPASS/HACK_UNLOCK_ICONS": "",
-  "BYPASS/HACK_UNLOCK_ICONS/TIP": "",
-  "BYPASS/HACK_UNLOCK_SHOPS": "",
-  "BYPASS/HACK_UNLOCK_SHOPS/TIP": "",
-  "BYPASS/HACK_UNLOCK_VAULTS": "",
-  "BYPASS/HACK_UNLOCK_VAULTS/TIP": "",
-  "COSMETIC": "",
-  "COSMETIC/HACK_CLASSIC_PARTICLES": "",
-  "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "",
-  "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "",
-  "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "",
-  "COSMETIC/HACK_HIDE_PAUSE_MENU": "",
-  "COSMETIC/HACK_HIDE_PAUSE_MENU/TIP": "",
-  "COSMETIC/HACK_HIDE_PLAYER": "",
-  "COSMETIC/HACK_HIDE_PLAYER/TIP": "",
-  "COSMETIC/HACK_NO_CAMERA": "",
-  "COSMETIC/HACK_NO_CAMERA/TIP": "",
-  "COSMETIC/HACK_NO_CAMERA_ZOOM": "",
-  "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "",
-  "COSMETIC/HACK_NO_DEATH_EFFECT": "",
-  "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP": "",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "",
-  "COSMETIC/HACK_NO_PARTICLES": "",
-  "COSMETIC/HACK_NO_PARTICLES/TIP": "",
-  "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "",
-  "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "",
-  "COSMETIC/HACK_NO_PULSE": "",
-  "COSMETIC/HACK_NO_PULSE/TIP": "",
-  "COSMETIC/HACK_NO_RESPAWN_FLASH": "",
-  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "",
-  "COSMETIC/HACK_NO_SHADERS": "",
-  "COSMETIC/HACK_NO_SHADERS/TIP": "",
-  "COSMETIC/HACK_NO_SHAKE": "",
-  "COSMETIC/HACK_NO_SHAKE/TIP": "",
-  "COSMETIC/HACK_NO_TRAIL": "",
-  "COSMETIC/HACK_NO_TRAIL/TIP": "",
-  "COSMETIC/HACK_NO_WAVE_PULSE": "",
-  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL": "",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "",
-  "COSMETIC/HACK_TRAIL_CUTTING": "",
-  "COSMETIC/HACK_TRAIL_CUTTING/TIP": "",
-  "COSMETIC/HACK_WAVE_TRAIL_FIX": "",
-  "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "",
-  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "",
-  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "",
-  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "",
-  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "",
-  "CREATOR": "",
-  "CREATOR/HACK_ACCURATE_SAVE": "",
-  "CREATOR/HACK_ACCURATE_SAVE/TIP": "",
-  "CREATOR/HACK_COPY_HACK": "",
-  "CREATOR/HACK_COPY_HACK/TIP": "",
-  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS": "",
-  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "",
-  "CREATOR/HACK_DEFAULT_SONG_BYPASS": "",
-  "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "",
-  "CREATOR/HACK_EDITOR_EXTENSION": "",
-  "CREATOR/HACK_EDITOR_EXTENSION/TIP": "",
-  "CREATOR/HACK_FREE_SCROLL": "",
-  "CREATOR/HACK_FREE_SCROLL/TIP": "",
-  "CREATOR/HACK_HIDE_UI": "",
-  "CREATOR/HACK_HIDE_UI/TIP": "",
-  "CREATOR/HACK_LEVEL_EDIT": "",
-  "CREATOR/HACK_LEVEL_EDIT/TIP": "",
-  "CREATOR/HACK_NO_C_MARK": "",
-  "CREATOR/HACK_NO_C_MARK/TIP": "",
+  "BYPASS/HACK_TEXT_LENGTH": "Разблокировать Длину Текста",
+  "BYPASS/HACK_TEXT_LENGTH/TIP": "Позволяет писать неограниченное количество текста в полях для него",
+  "BYPASS/HACK_TREASURE_ROOM": "Разблокировать Сокровищницу",
+  "BYPASS/HACK_TREASURE_ROOM/TIP": "Разблокирует сокровищницу",
+  "BYPASS/HACK_UNLOCK_ICONS": "Разблокировать Иконки",
+  "BYPASS/HACK_UNLOCK_ICONS/TIP": "Разблокирует все иконки игрока",
+  "BYPASS/HACK_UNLOCK_SHOPS": "Разблокировать Магазины",
+  "BYPASS/HACK_UNLOCK_SHOPS/TIP": "Разблокирует все магазины",
+  "BYPASS/HACK_UNLOCK_VAULTS": "Разблокировать Хранилица",
+  "BYсPASS/HACK_UNLOCK_VAULTS/TIP": "Разблокирует все хранилища",
+  "COSMETIC": "Косметичные",
+  "COSMETIC/HACK_CLASSIC_PARTICLES": "Классические Частицы",
+  "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Восстанавливает классические мини-частицы, которые следовали за игроком",
+  "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Скрыть Кнопку Паузы",
+  "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Скрывает кнопку паузы, когда включен внутриигровой курсор",
+  "COSMETIC/HACK_HIDE_PAUSE_MENU": "Скрыть Меню Паузы",
+  "COSMETIC/HACK_HIDE_PAUSE_MENU/TIP": "Скрывает меню паузы, полезно для создания скриншотов уровней",
+  "COSMETIC/HACK_HIDE_PLAYER": "Скрыть Игрока",
+  "COSMETIC/HACK_HIDE_PLAYER/TIP": "Скрывает игрока",
+  "COSMETIC/HACK_NO_CAMERA": "Без Движения Камеры",
+  "COSMETIC/HACK_NO_CAMERA/TIP": "Отключает триггеры движения камеры",
+  "COSMETIC/HACK_NO_CAMERA_ZOOM": "Без Ракурса Камеры",
+  "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Отключает триггеры изменения ракурса камеры",
+  "COSMETIC/HACK_NO_DEATH_EFFECT": "Без Эффекта Смерти",
+  "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Без визуальных эффектов смерти",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP": "Без Переворота",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Остановка переворота надписей "Попытка" и "Уровень пройден!",
+  "COSMETIC/HACK_NO_PARTICLES": "Без Частиц",
+  "COSMETIC/HACK_NO_PARTICLES/TIP": "Отключает систему частиц (в основном)",
+  "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Без Портальной Молнии",
+  "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Отключает портальную молнию от порталов, изменяющих размер",
+  "COSMETIC/HACK_NO_PULSE": "Без Пульсации",
+  "COSMETIC/HACK_NO_PULSE/TIP": "Отключает пульсацию на объектах",
+  "COSMETIC/HACK_NO_RESPAWN_FLASH": "Без Вспышки Возрождения",
+  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Отключает вспышку возрождения ",
+  "COSMETIC/HACK_NO_SHADERS": "Без Шейдеров",
+  "COSMETIC/HACK_NO_SHADERS/TIP": "Отключает шейдеры на уровне",
+  "COSMETIC/HACK_NO_SHAKE": "Без Тряски",
+  "COSMETIC/HACK_NO_SHAKE/TIP": "Отключает триггеры тряски",
+  "COSMETIC/HACK_NO_TRAIL": "Без Следа",
+  "COSMETIC/HACK_NO_TRAIL/TIP": "Всегда отключает следующий за игроком след",
+  "COSMETIC/HACK_NO_WAVE_PULSE": "Без Пульсации Волны",
+  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Отключает пульсацию волны",
+  "COSMETIC/HACK_NO_WAVE_TRAIL": "Без Следа Волны",
+  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Отключает жесткий волновой след, остается стандартный след",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "Без Заднего Следа Волны",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Отключает стандартный след игрока за следом волны",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Сплошной След Волны",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Нет смешивания на следе волны, например как черно-белый след",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Остановка Триггеров При Смерти",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Остановить срабатывание триггеров движения/вращения при смерти, чтобы вы могли видеть, что вас убило",
+  "COSMETIC/HACK_TRAIL_CUTTING": "Обрезка Следа",
+  "COSMETIC/HACK_TRAIL_CUTTING/TIP": "Возвращает баг, связанный с обрезкой волны",
+  "COSMETIC/HACK_WAVE_TRAIL_FIX": "Исправление Следа Волны",
+  "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "Исправляет защелкивание следа волны",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "След Волны При Смерти",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Созраняет след волны видимым при смерти",
+  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Множитель Пульсирования Волны",
+  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "x",
+  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "Размер Пульсирования Следа Волны",
+  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "Изменяет множитель изменения размера следа волны",
+  "CREATOR": "Создание",
+  "CREATOR/HACK_ACCURATE_SAVE": "Точное Сохранение",
+  "CREATOR/HACK_ACCURATE_SAVE/TIP": "Позиции объектов сохраняются более точно",
+  "CREATOR/HACK_COPY_HACK": "Обход Копирования",
+  "CREATOR/HACK_COPY_HACK/TIP": "Позволяет копировать любой уровень, даже если он с паролем",
+  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS": "Обход Лимита Кастомных Объектов",
+  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "Позволяет обходить лимит кастомных объектов, позволяя ставить больше 50",
+  "CREATOR/HACK_DEFAULT_SONG_BYPASS": "Обход Обычной Музыки",
+  "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "Позволяет использовать скрытую обычную музыку в редакторе",
+  "CREATOR/HACK_EDITOR_EXTENSION": "Расширение Редактора",
+  "CREATOR/HACK_EDITOR_EXTENSION/TIP": "Увеличивает длину редактора в 128 раз",
+  "CREATOR/HACK_FREE_SCROLL": "Свободная Прокрутка",
+  "CREATOR/HACK_FREE_SCROLL/TIP": "Позволяет прокручивать вне редактора",
+  "CREATOR/HACK_HIDE_UI": "Спрятать Интерфейс",
+  "CREATOR/HACK_HIDE_UI/TIP": "Прячет интерфейс редактора пока происходит постройка",
+  "CREATOR/HACK_LEVEL_EDIT": "Изменение Уровня",
+  "CREATOR/HACK_LEVEL_EDIT/TIP": "Позволяет изменять любой уровень через меню паузы",
+  "CREATOR/HACK_NO_C_MARK": "Без значка C",
+  "CREATOR/HACK_NO_C_MARK/TIP": "Убирает значок C когда загружаешь скопированный уровень",
   "CREATOR/HACK_PLACE_OVER": "",
   "CREATOR/HACK_PLACE_OVER/TIP": "",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "",
