--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -14,7 +14,7 @@
   "HOME/LANGUAGE": "Мова: ",
   "HOME/SEARCH": "Пошук:",
   "BYPASS": "Обхід",
-  "BYPASS/HACK_MAIN_LEVELS": "Главні Рівні",
+  "BYPASS/HACK_MAIN_LEVELS": "Головні Рівні",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Відкривае рівні головних демонів",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Розблокувач Музики",
   "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Робить музику в практиці таку ж як і в орігіналі",
@@ -60,21 +60,21 @@
   "COSMETIC/HACK_NO_SHAKE": "Без Тряски",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Вимикає тригери ефекту тряски",
   "COSMETIC/HACK_NO_TRAIL": "Без Сліду",
-  "COSMETIC/HACK_NO_TRAIL/TIP": "Ставить слід/трейл завжди вимкнутим",
+  "COSMETIC/HACK_NO_TRAIL/TIP": "Ставить слід завжди вимкнутим",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Без Пульсу Волни",
   "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Вимикає пульсу волни",
   "COSMETIC/HACK_NO_WAVE_TRAIL": "Без Сліду Волни",
-  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Вимикає основний слід/трейл волни, стандартний слід/трейл заливається",
+  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Вимикає основний слід волни, стандартний слід заливається",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "Без Сліду Волни Позаду",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Вимикає стандартний слід/трейл ігрока позаду сліду/трейлу волни",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Вимикає стандартний слід ігрока позаду сліду волни",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Солідний Слід Волни",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Вбирає змішування на сліду/трейлу волни, як чорний & білий слід/трейл",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Вбирає змішування на сліду волни, як чорний & білий слід",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Зупиняти Тригери Після Смерті",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Зупиняє тригери руху/обертання на смерті, щоб ви могли бачити, що вас убило",
   "COSMETIC/HACK_TRAIL_CUTTING": "Нарізка Сліду",
-  "COSMETIC/HACK_TRAIL_CUTTING/TIP": "Вертає тот самий баг коли нарізується слід/трейд волни",
+  "COSMETIC/HACK_TRAIL_CUTTING/TIP": "Вертає той самий баг коли нарізується слід волни",
   "COSMETIC/HACK_WAVE_TRAIL_FIX": "Фікс Сліду Волни",
-  "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "Фіксить замикання сліду/трейлу волни",
+  "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "Фіксить замикання сліду волни",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Слід Волни Після Смерті",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Зберігає слід волни після смерті відимим",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Множник Пульсу Волни",
@@ -103,7 +103,7 @@
   "CREATOR/HACK_PLACE_OVER": "Накладання Об'єктів",
   "CREATOR/HACK_PLACE_OVER/TIP": "Дозволяє розміщувати один і той же об'єкт один на одного в редакторі",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Плавний Слід Редактора",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Робить слід/трейл відтворення в редакторі більш плавною, оновлюючи її кожен кадр замість 30 кадрів в секунду",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Робить слід відтворення в редакторі більш плавною, оновлюючи її кожен кадр замість 30 кадрів в секунду",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "Обхід Кнопок Інструментів",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Дозволяє більше об'єктів в інструментах редактора",
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Обхід Обмежень Тригерів",
@@ -152,7 +152,7 @@
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Обхід Ліміт Чекпоінтів",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Обходить ліміт в 50 контрольних точок",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Збирати Монети в Практиці",
-  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Дозволяє збирати монети користувача та золоті монети в режимі практиці. Зроблено WEGFan",
+  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Дозволяє збирати монети користувача та золоті монети в режимі практиці. Зробил WEGFan",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "Підтвердження Повного Ресету",
   "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "Вимагає підтвердження перед повним перезапуском рівня",
   "LEVEL/HACK_CONFIRM_NORMAL": "Підтвердження Нормального Режиму",
@@ -270,6 +270,6 @@
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/2": "Нормальний",
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/3": "Високий",
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Найвищий",
-  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Процес Пріоритет",
-  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Впливає на кількість часу процесора, відведеного GD, може покращити продуктивність"
+  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Пріоритет Процесу",
+  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Впливає на кількість часу процесора відведеного для GD, може покращити продуктивність"
 }
