--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -1,14 +1,14 @@
 {
   "NX/COLOUR/B": "Синій: ",
-  "NX/COLOUR/B/PRE":"С: ",
+  "NX/COLOUR/B/PRE":"B: ",
   "NX/COLOUR/DROPDOWN/INPUT": "HEX колір:",
   "NX/COLOUR/DROPDOWN/INPUT/PRE": "Hex: ",
   "NX/COLOUR/G": "Зелений:",
-  "NX/COLOUR/G/PRE": "З:",
+  "NX/COLOUR/G/PRE": "G:",
   "NX/COLOUR/INPUT": "HEX колір:",
   "NX/COLOUR/INPUT/PRE": "Hex:",
   "NX/COLOUR/R": "Червоний:",
-  "NX/COLOUR/R/PRE": "Ч:",
+  "NX/COLOUR/R/PRE": "R:",
   "NX/COLOUR/RESET": "HEX колір",
   "HOME": "Mega Hack",
   "HOME/LANGUAGE": "Мова: ",
@@ -78,7 +78,7 @@
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Слід Волни Після Смерті",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Зберігає слід волни після смерті відимим",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Множник Пульсу Волни",
-  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "X",
+  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "x",
   "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "Розмір Пульсу Волни",
   "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "Змінює множник пульсу та розмір волни",
   "CREATOR": "Творець",
@@ -261,7 +261,7 @@
   "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Повідомлення безпечного режиму",
   "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Попереджає перед входом у рівень, якщо чіти увімкнені",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Октави:",
-  "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH/PRE": "Октави: ",
+  "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH/PRE": "Octaves: ",
   "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER": "Зміна висоти тону",
   "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER/TIP": "Змінює висоту тону фонової музики",
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO": "Пріоритет: ",
@@ -270,6 +270,6 @@
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/2": "Нормальний",
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/3": "Високий",
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Найвищий",
-  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Пріоритет Процесу",
+  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Пріоритет Процесу ",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Впливає на кількість часу процесора відведеного для GD, може покращити продуктивність"
 }
