--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -119,7 +119,7 @@
   "LEVEL/AUTO_DEAFEN/DROPDOWN/SHORTCUT": "Кнопка заглушения:",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/SHORTCUT/PRE": "Кнопка:",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT": "Разглушить на:",
-  "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/PRE": "Разглушить на" ",
+  "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/PRE": "Разглушить на",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/SUF": "%",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_ON_PAUSE": "Разглушить в паузе",
   "LEVEL/AUTO_DEAFEN/HACK_AUTO_DEAFEN": "Авто заглушение",
