--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -186,9 +186,9 @@
   "LEVEL/JUMPSCARE/DROPDOWN/PROBABILITY": "Время (с):",
   "LEVEL/JUMPSCARE/DROPDOWN/PROBABILITY/PRE": "Время:",
   "LEVEL/JUMPSCARE/DROPDOWN/PROBABILITY/SUF": "с",
-  "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD": "",
-  "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD/PRE": "",
-  "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD/SUF": "",
+  "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD": "Порог времени (с):",
+  "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD/PRE": "Порог: ",
+  "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD/SUF": "с",
   "LEVEL/JUMPSCARE/HACK_JUMPSCARE": "Скример",
   "LEVEL/JUMPSCARE/HACK_JUMPSCARE/TIP": "Тут даже говорить не о чем",
   "LEVEL/NOCLIP/DROPDOWN/PLAYER_1": "Игрок 1",
